phalcon/css/main.css
/* ... */
.phalcon-blog-detail_documetation h2,
.phalcon-blog-detail_documetation h3,
.phalcon-blog-detail_documetation h4 {
    color: #273646;
    font-weight: 700;
    line-height: normal;
    position: relative;
    margin: 0;
    margin-bottom: 3px;
}

.phalcon-blog-detail_documetation h2:before,
.phalcon-blog-detail_documetation h3:before,
.phalcon-blog-detail_documetation h4:before {
    position: relative;
    content: '# ';
    font-size: 1em;
    color: #8FC19A;
}

.phalcon-blog-detail_documetation h1,
.phalcon-blog-detail_documetation h2 {
    font-size: 20px;
    margin-bottom: 12px;
}

.phalcon-blog-detail_documetation h3 {
    font-size: 18px;
    margin-bottom: 10px;
}

.phalcon-blog-detail_documetation h4 {
    font-weight: 400;
    font-size: 16px;
    margin-bottom: 8px;
}

.phalcon-blog-detail_documetation div.highlighter-rouge {
    margin-top: 19px;
    margin-bottom: 19px;
}

.phalcon-blog-detail_documetation code {
    background-color: #F5F5F5;
    color: #385B56;
    padding: 2px 5px;
    -webkit-border-radius: 4px;
    border-radius: 4px;
}

.phalcon-blog-detail_documetation table {
    margin-top: 29px;
    margin-bottom: 26px;
}

.phalcon-blog-detail_documetation table th {
    background-color: rgba(39, 54, 70, 0.1);
    padding-top: 14px;
    padding-bottom: 16px;
    text-align: left;
    padding-left: 14px;
}

.phalcon-blog-detail_documetation table td {
    border: none;
    border-bottom: 1px solid rgba(39, 54, 70, 0.1);
    background-color: rgba(229, 229, 229, 0.1);
    font-size: 14px;
    padding-top: 12px;
    padding-bottom: 12px;
}

.phalcon-blog-detail_documetation table td,
.phalcon-blog-detail_documetation table th {
    border-right: 1px solid rgba(39, 54, 70, 0.1);
}

.phalcon-blog-detail_documetation table td:last-child,
.phalcon-blog-detail_documetation table th:last-child {
    border-right: none;
}

.phalcon-blog-detail_documetation table tr:last-child td {
    border-bottom: none;
}

.phalcon-blog-detail_documetation table code {
    font-size: 14px;
}

.documentation-nav-wr {
    position: -webkit-sticky;
    position: sticky;
}

.documentation-nav {
    background: rgba(229, 229, 229, 0.4);
    -webkit-border-radius: 2px;
    border-radius: 2px;
    font-size: 14px;
    max-height: 90vh;
    overflow: auto;
    margin-bottom: 0;
}

.documentation-nav-item__label {
    color: #273646;
    padding-top: 11px;
    padding-bottom: 12px;
    display: block;
    width: 100%;
    padding-left: 33px;
    position: relative;
    -webkit-transition: 0.2s;
    -o-transition: 0.2s;
    transition: 0.2s;
    -o-text-overflow: ellipsis;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    padding-right: 10px;
}

.documentation-nav-item__label:hover {
    color: #FFFFFF;
    background-color: #273646;
}

.documentation-nav-item__label:hover svg {
    fill: #fff;
    fill-opacity: 1;
}

.documentation-nav-item__label-icon {
    position: absolute;
    left: 20px;
    top: 10px;
}

.documentation-nav-item__label-icon svg {
    -webkit-transition: 0.2s;
    -o-transition: 0.2s;
    transition: 0.2s;
}

.documentation-nav-item__label_opened {
    color: #FFFFFF;
    background-color: #273646;
}

.documentation-nav-item__label_opened svg {
    -webkit-transform: rotate(90deg);
    -ms-transform: rotate(90deg);
    transform: rotate(90deg);
    fill: #fff;
    fill-opacity: 1;
}

.documentation-nav-item__sublist {
    background-color: rgba(229, 229, 229, 0.7);
    display: none;
}

.documentation-nav-item__sublist-link {
    color: rgba(39, 54, 70, 0.7);
    padding-left: 42px;
    padding-top: 11px;
    padding-bottom: 12px;
    display: inline-block;
    width: 100%;
    -webkit-transition: 0.2s;
    -o-transition: 0.2s;
    transition: 0.2s;
    -o-text-overflow: ellipsis;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
    padding-right: 10px;
}

.documentation-nav-item__sublist-link:hover {
    color: #273646;
}

.documentation-nav-item__sublist-item {
    position: relative;
}

.documentation-nav-item__sublist-item:after {
    position: absolute;
    content: '';
    width: 2px;
    height: 2px;
    -webkit-border-radius: 100%;
    border-radius: 100%;
    background-color: #273646;
    display: block;
    color: #273646;
    line-height: 0;
    left: 33px;
    top: 0;
    bottom: 0;
    top: 50%;
    margin-top: -2px;
}

.documentation-nav-item__sublist-link_active {
    border-left: 2px solid #8FC19A;
    padding-left: 40px;
}

.doc-article-nav-wr {
    position: absolute;
    height: 100%;
    left: 0;
    top: 0;
    z-index: 2;
    padding-bottom: 30px;
    padding-top: 50px;
}

.doc-article-nav-items {
    position: -webkit-sticky;
    position: sticky;
    top: 20px;
    max-height: -webkit-calc(100vh - 40px);
    max-height: calc(100vh - 40px);
    height: 100%;
}

.doc-article-nav-items {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-box-align: center;
    -webkit-align-items: center;
    -ms-flex-align: center;
    align-items: center;
}

.doc-article-nav-items:hover .doc-article-nav-markers {
    opacity: 0;
}

.doc-article-nav-items:hover .doc-article-nav-list {
    -webkit-transform: translateX(0);
    -ms-transform: translateX(0);
    transform: translateX(0);
}
/* ... */

